--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  provider: ^6.0.3
+  image_picker: ^0.8.5+3
+  image_picker_windows: ^0.1.0+2
 
 dev_dependencies:
   flutter_test:
