--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,14 @@ dependencies:
   carousel_slider: 5.0.0
   flutter:
     sdk: flutter
-
+  google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  google_fonts: ^6.2.1
 
 flutter:
   uses-material-design: true
