--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
-
+  video_player: ^2.8.1
   image_picker: ^1.0.4
   image_picker_windows: ^0.2.1
   audioplayers: ^5.2.1
